Improved Palette and start improving main.
Added dependency Commons lang